# firebase-auth

./: .stylish-haskell.yaml  README.md  firebase-auth.cabal  stack.yaml
src/Firebase/: Auth.hs
src/Lib/: Prelude.hs
