name:                firebase-auth
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/donatello/firebase-auth#readme
license:             BSD3
license-file:        LICENSE
author:              Aditya Manthramurthy
maintainer:          myaditya@protonmail.ch
copyright:           Apache2.0
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Firebase.Auth
  other-modules:       Lib.Prelude
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.2.2 && < 0.3
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , cryptonite
                     , errors
                     , http-conduit
                     , http-types
                     , jose
                     , microlens
                     , pem
                     , scientific
                     , text
                     , unliftio
                     , unordered-containers
                     , x509

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
                     , FlexibleContexts
                     , TemplateHaskell
                     , TupleSections

test-suite firebase-auth-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , firebase-auth
                     , protolude >= 0.2.2 && < 0.3
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
                     , FlexibleContexts
                     , TemplateHaskell

source-repository head
  type:     git
  location: https://github.com/donatello/firebase-auth
